--- a/web-app/src/styles.scss
+++ b/web-app/src/styles.scss
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+.container {
+    max-width: 1500px;
+    margin: 30px auto;
+    overflow: auto;
+    min-height: 900px;
+    border: 1px solid steelblue;
+    padding: 40px;
+    border-radius: 5px;
+}
+
+.searchBar input{
+    width: 100%;
+    height: 40px;
+    font-size: 17px;
+}
