Renaming and CSS
Rename search bar name and adjust css

--- a/web-app/src/app/componenets/header/header.component.html
+++ b/web-app/src/app/componenets/header/header.component.html
@@ -1,3 +1,4 @@
-<div class="searchBar">
-    <input [(ngModel)]="text" type="text" name="text" id="text" placeholder="Search Movie Generator">
+<div id="searchBar">
+    <input [(ngModel)]="searchBarText" type="text" name="searchBarText" id="searchBarText" placeholder="Search Movie Generator">
+    {{searchBarText}}
 </div>
