--- a/web-app/src/app/componenets/header/header.component.scss
+++ b/web-app/src/app/componenets/header/header.component.scss
@@ -1,8 +1,4 @@
-.searchBar {
-    margin: 20px 0;
-}
-
-.searchBar input{
+#searchBarText {
     width: 100%;
     height: 40px;
     font-size: 17px;
