--- a/web-app/src/app/componenets/header/header.component.scss
+++ b/web-app/src/app/componenets/header/header.component.scss
@@ -2,4 +2,10 @@
     width: 100%;
     height: 40px;
     font-size: 17px;
+    padding: 5px 15px;
+}
+
+#searchBar {
+    display: flex;
+    align-items: center;
 }
