Add auth service.

--- a/web-app/src/app/app.component.html
+++ b/web-app/src/app/app.component.html
@@ -1,4 +1,6 @@
 <router-outlet></router-outlet>
 <div class="container">
   <app-header></app-header>
+  <button (click)="onSignUp()">sign up</button>
+  <button (click)="onLogin()">login</button>
 </div>
