API call to get actor name and bio

--- a/web-app/src/app/Pages/actor-actress-page/actor-actress-page.component.html
+++ b/web-app/src/app/Pages/actor-actress-page/actor-actress-page.component.html
@@ -10,11 +10,8 @@
           <div id="actorInformation">
               <img id="actorPhoto" src="https://www.biography.com/.image/t_share/MTgwNDU1MTgzMTI0Mjc3MTAw/gettyimages-1257937597.jpg" alt="Tom Hanks">
               <div id="actorTextInformation">
-                  <h1>Tom Hanks</h1>
-                  <p>Lorem ipsum dolor sit amet, ei alia assueverit definitionem mei, nam ei vivendo platonem patrioque. 
-                      Mea prompta noluisse efficiantur te, has cu congue docendi intellegebat, autem augue quaestio eum ei. 
-                      Soleat prompta fabellas cu vim, ad eros solet pro. Ne libris electram definiebas mei, his iudico mucius oportere ea. 
-                      Libris iisque ei vix, iisque percipitur assueverit et ius. In quis magna argumentum sit, possit convenire pri no.</p>
+                  <h1>{{ actorName }}</h1>
+                  <p> {{ actorBio }}</p>
               </div>
           </div>
           <div id="actorPhotos">
