--- a/web-app/src/app/Pages/actor-actress-page/actor-actress-page.component.scss
+++ b/web-app/src/app/Pages/actor-actress-page/actor-actress-page.component.scss
@@ -18,7 +18,7 @@ $buttonBorderColor: rgb(138, 43, 226);
   background-color: rgba(0, 0, 0, 0.75);
   border-radius: 5px;
   width: 60vw;
-  height: 1050px;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-self: center;
