API calls to get actor info
API call to get name and bio working but still working on movie names

--- a/web-app/src/app/Pages/actor-actress-page/actor-actress-page.component.html
+++ b/web-app/src/app/Pages/actor-actress-page/actor-actress-page.component.html
@@ -8,7 +8,7 @@
     <div id="actorPageModal">
       <div id="actorPageInnerDiv">
           <div id="actorInformation">
-              <img id="actorPhoto" src="https://www.biography.com/.image/t_share/MTgwNDU1MTgzMTI0Mjc3MTAw/gettyimages-1257937597.jpg" alt="Tom Hanks">
+              <img id="actorPhoto" src="{{actorPhotoURL}}" alt="{{actorName}}">
               <div id="actorTextInformation">
                   <h1>{{ actorName }}</h1>
                   <p> {{ actorBio }}</p>
@@ -16,7 +16,7 @@
           </div>
           <div id="actorPhotos">
               <h1>Photos</h1>
-              <div class="photosRow">
+              <div class="photosRow">i
                 <div class="column">
                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRyiJCYfCzFmSZECA0mmKonJpDEAbsiXX7fkA&usqp=CAU" alt="Snow" style="width:100%">
                 </div>
