--- a/web-app/src/app/Pages/settings-page/settings-page.component.scss
+++ b/web-app/src/app/Pages/settings-page/settings-page.component.scss
@@ -111,3 +111,67 @@ $buttonBorderColor: rgb(138, 43, 226);
     padding: 8px 20px 8px 20px;
     margin-bottom: 1vh;
 }
+
+#clickModal {
+  background-color: rgba(0, 0, 0, 0.75);
+  border-radius: 5px;
+  width: 40vw;
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-self: center;
+  padding-top: 3vh;
+  padding-bottom: 3vh;
+}
+
+#recommendationInnerDiv {
+  display: flex;
+  flex-direction: column;
+  width: 30vw;
+}
+
+#accountPreferencesOuterColumnContainer {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5%;
+}
+
+#accountPreferencesHeader {
+  color: white;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  align-self: flex-start;
+}
+
+.accountPreferencesInput {
+  color: white;
+}
+
+#accountPreferencesButton {
+  color:white;
+  width: 100%;
+  height: 6vh;
+  border-radius: 5px;
+  border: none;
+  background-color: #a4508b;
+  background-image: linear-gradient(326deg, #a4508b 0%, #5f0a87 74%);
+  padding: 8px 0px 8px 0px;
+}
+
+#accountDetailsPopup {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#recommendatioPreferencesPopup {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#appearancePopup {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
