--- a/web-app/src/app/Pages/settings-page/settings-page.component.scss
+++ b/web-app/src/app/Pages/settings-page/settings-page.component.scss
@@ -160,6 +160,7 @@ $buttonBorderColor: rgb(138, 43, 226);
 
 #accountDetailsPopup {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
