--- a/web-app/src/app/Pages/settings-page/settings-page.component.html
+++ b/web-app/src/app/Pages/settings-page/settings-page.component.html
@@ -40,7 +40,7 @@
        
     <div style="display: none;" id="recommendatioPreferencesPopup">
       <div id="recommendationInnerDiv">
-        <h1 id="accountPreferencesHeader">Preferences</h1>
+        <h1 id="accountPreferencesHeader">Edit Preferences</h1>
         <div id="accountPreferencesOuterColumnContainer">
           <div>
             <div>
@@ -131,7 +131,7 @@
   
     <div style="display: none;" id="appearancePopup">
       <div id="appearanceInnerDiv">
-        <h1 class="settingsHeader">Edit Account</h1>
+        <h1 class="settingsHeader">Edit Appearance</h1>
         <div>
           <div class="accountPreferencesRows">
         <div>
