Actor Movie API call
API call to get movies but at this point only printing the movies and not in the UI yet

--- a/web-app/src/app/Pages/actor-actress-page/actor-actress-page.component.html
+++ b/web-app/src/app/Pages/actor-actress-page/actor-actress-page.component.html
@@ -16,7 +16,7 @@
           </div>
           <div id="actorPhotos">
               <h1>Photos</h1>
-              <div class="photosRow">i
+              <div class="photosRow">
                 <div class="column">
                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRyiJCYfCzFmSZECA0mmKonJpDEAbsiXX7fkA&usqp=CAU" alt="Snow" style="width:100%">
                 </div>
