--- a/web-app/src/app/Pages/actor-actress-page/actor-actress-page.component.html
+++ b/web-app/src/app/Pages/actor-actress-page/actor-actress-page.component.html
@@ -14,36 +14,11 @@
                   <p> {{ actorBio }}</p>
               </div>
           </div>
-          <div id="actorPhotos">
-              <h1>Photos</h1>
-              <div class="photosRow">
-                <div class="column">
-                  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRyiJCYfCzFmSZECA0mmKonJpDEAbsiXX7fkA&usqp=CAU" alt="Snow" style="width:100%">
-                </div>
-                <div class="column">
-                  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSjpZbNZT_1HGdYBqMlD_cQXNT3WFkkqUfgA&usqp=CAU" alt="Forest" style="width:100%">
-                </div>
-                <div class="column">
-                  <img src="https://compote.slate.com/images/4e263356-e8a9-4459-ad88-1393e9e7df48.jpeg?width=780&height=520&rect=810x540&offset=0x0" alt="Mountains" style="width:100%">
-                </div>
-                <div class="column">
-                    <img src="https://www.biography.com/.image/t_share/MTQ1MjI5NDUxNTc0MTI1OTc2/tom-hanks---early-years.jpg" alt="Mountains" style="width:100%">
-                  </div>
-              </div>
-          </div>
           <div>
             <h1>Filmography</h1>
-            <table id="movieNameTable">
-                <tr>
-                  <td id="movieName">Forrest Gump</td>
-                </tr>
-                <tr>
-                  <td id="movieName">Cast Away</td>
-                </tr>
-                <tr>
-                  <td id="movieName">Saving Private Ryan</td>
-                </tr>
-              </table>
+              <div *ngFor="let actorMovie of actorMovies" id="movieName"> 
+                {{ actorMovie }}
+              </div>
         </div>
       </div>
     </div>
