help, security ,and history finished
more content can be added, please let me know if there is anything extra to place on the modals

--- a/web-app/src/app/Pages/settings-page/settings-page.component.html
+++ b/web-app/src/app/Pages/settings-page/settings-page.component.html
@@ -5,67 +5,105 @@
       Generator</span
     >
   </div>
-  
-    <div id="settingsPageModal">  
-      <div id="settingsPageInnerDiv">
-        <h1 id="settingsPageHeader">Settings</h1>
-        <div id="settingsPageInputDiv">
-            <input (click)="showAccountDetailsModal()" readonly class="settingsPageLink" placeholder="Account Details"/>
-            <input (click)="showRecommendationModal()" readonly class="settingsPageLink" placeholder="Recommendation Preferences"/>
-            <input (click)="showAppearanceModal()" readonly class="settingsPageLink" placeholder="Appearance"/>
-            <input (click)="alertMe()" readonly class="settingsPageLink" placeholder="History"/>
-            <input (click)="alertMe()" readonly class="settingsPageLink" placeholder="Security"/>
-            <input (click)="alertMe()" readonly class="settingsPageLink" placeholder="Help"/>
-            <input (click)="alertMe()" readonly class="settingsPageLink" placeholder="Terms and Conditions"/>
-            <input (click)="alertMe()" readonly class="settingsPageLink" placeholder="Feedback"/>
-            <input (click)="alertMe()" readonly class="settingsPageLink" placeholder="Sign Out"/>
-        </div>
+
+  <div id="settingsPageModal">
+    <div id="settingsPageInnerDiv">
+      <h1 id="settingsPageHeader">Settings</h1>
+      <div id="settingsPageInputDiv">
+        <input
+          (click)="showAccountDetailsModal()"
+          readonly
+          class="settingsPageLink"
+          placeholder="Account Details"
+        />
+        <input
+          (click)="showRecommendationModal()"
+          readonly
+          class="settingsPageLink"
+          placeholder="Recommendation Preferences"
+        />
+        <input
+          (click)="showAppearanceModal()"
+          readonly
+          class="settingsPageLink"
+          placeholder="Appearance"
+        />
+        <input
+          (click)="showHistoryModal()"
+          readonly
+          class="settingsPageLink"
+          placeholder="History"
+        />
+        <input
+          (click)="showSecurityModal()"
+          readonly
+          class="settingsPageLink"
+          placeholder="Security"
+        />
+        <input
+          (click)="showHelpModal()"
+          readonly
+          class="settingsPageLink"
+          placeholder="Help"
+        />
+        <input
+          (click)="alertMe()"
+          readonly
+          class="settingsPageLink"
+          placeholder="Terms and Conditions"
+        />
+        <input
+          (click)="alertMe()"
+          readonly
+          class="settingsPageLink"
+          placeholder="Feedback"
+        />
+        <input
+          (click)="alertMe()"
+          readonly
+          class="settingsPageLink"
+          placeholder="Sign Out"
+        />
       </div>
     </div>
-     
-  <div style="display: none;" id="clickModal">
-    
-      <div style="display: none;" id="accountDetailsPopup">
-        
-        <div id="accountDetailsInnerDiv">
-          <h1 class="settingsHeader">Edit Account</h1>
-        <div><input placeholder="First Name" class="settingsPageInput"></div>
-        <div><input placeholder="Last Name" class="settingsPageInput"></div>
-        <div><input placeholder="Email Address" class="settingsPageInput"></div>
-        <div><input placeholder="Phone Number" class="settingsPageInput"></div>
+  </div>
+
+  <div style="display: none" id="clickModal">
+    <div style="display: none" id="accountDetailsPopup">
+      <div id="accountDetailsInnerDiv">
+        <h1 class="settingsHeader">Edit Account</h1>
+        <div><input placeholder="First Name" class="settingsPageInput" /></div>
+        <div><input placeholder="Last Name" class="settingsPageInput" /></div>
+        <div>
+          <input placeholder="Email Address" class="settingsPageInput" />
+        </div>
+        <div>
+          <input placeholder="Phone Number" class="settingsPageInput" />
+        </div>
         <button id="accountPreferencesButton">Submit</button>
       </div>
-      </div>
-       
-       
-    <div style="display: none;" id="recommendatioPreferencesPopup">
+    </div>
+
+    <div style="display: none" id="recommendatioPreferencesPopup">
       <div id="recommendationInnerDiv">
         <h1 id="accountPreferencesHeader">Edit Preferences</h1>
         <div id="accountPreferencesOuterColumnContainer">
           <div>
             <div>
               <input type="checkbox" id="horror" name="horror" />
-              <label class="accountPreferencesInput" for="horror"
-                >Horror</label
-              >
+              <label class="accountPreferencesInput" for="horror">Horror</label>
             </div>
             <div>
               <input type="checkbox" id="comedy" name="comedy" />
-              <label class="accountPreferencesInput" for="comedy"
-                >Comedy</label
-              >
+              <label class="accountPreferencesInput" for="comedy">Comedy</label>
             </div>
             <div>
               <input type="checkbox" id="action" name="action" />
-              <label class="accountPreferencesInput" for="action"
-                >Action</label
-              >
+              <label class="accountPreferencesInput" for="action">Action</label>
             </div>
             <div>
               <input type="checkbox" id="drama" name="drama" />
-              <label class="accountPreferencesInput" for="drama"
-                >Drama</label
-              >
+              <label class="accountPreferencesInput" for="drama">Drama</label>
             </div>
           </div>
           <div>
@@ -101,15 +139,11 @@
           <div>
             <div>
               <input type="checkbox" id="sports" name="sports" />
-              <label class="accountPreferencesInput" for="sports"
-                >Sport</label
-              >
+              <label class="accountPreferencesInput" for="sports">Sport</label>
             </div>
             <div>
               <input type="checkbox" id="drama" name="drama" />
-              <label class="accountPreferencesInput" for="drama"
-                >Drama</label
-              >
+              <label class="accountPreferencesInput" for="drama">Drama</label>
             </div>
             <div>
               <input type="checkbox" id="biography" name="biography" />
@@ -128,71 +162,211 @@
         <button id="accountPreferencesButton">Submit</button>
       </div>
     </div>
-  
-    <div style="display: none;" id="appearancePopup">
+
+    <div style="display: none" id="appearancePopup">
       <div id="appearanceInnerDiv">
         <h1 class="settingsHeader">Edit Appearance</h1>
         <div>
           <div class="accountPreferencesRows">
+            <div>
+              <label class="accountPreferencesInput" for="username"
+                >Display Username</label
+              >
+              <input type="checkbox" id="username" name="username" />
+            </div>
+            <div>
+              <label class="accountPreferencesInput" for="usernameTextColor"
+                >Username Text Color
+              </label>
+
+              <select name="usernameTextColor" id="usernameTextColor">
+                <option value="">Select:</option>
+                <option value="red">Red</option>
+                <option value="orange">Orange</option>
+                <option value="yellow">Yellow</option>
+                <option value="green">Green</option>
+                <option value="blue">Blue</option>
+                <option value="indigo">Indigo</option>
+              </select>
+            </div>
+          </div>
+          <div class="accountPreferencesRows">
+            <div>
+              <label class="accountPreferencesInput" for="mystery"
+                >Display User Photo</label
+              >
+              <input type="checkbox" id="mystery" name="mystery" />
+            </div>
+
+            <div>
+              <label class="accountPreferencesInput" for="usernameTextColor"
+                >Photo Border Color
+              </label>
+
+              <select name="usernameTextColor" id="usernameTextColor">
+                <option value="">Select:</option>
+                <option value="red">Red</option>
+                <option value="orange">Orange</option>
+                <option value="yellow">Yellow</option>
+                <option value="green">Green</option>
+                <option value="blue">Blue</option>
+                <option value="indigo">Indigo</option>
+              </select>
+            </div>
+          </div>
+        </div>
+        <button id="accountPreferencesButton">Submit</button>
+      </div>
+    </div>
+    <div style="display: none" id="historyPopup">
+      <div id="historyInnerDiv">
+        <h1 class="settingsHeader">Edit History</h1>
         <div>
-          
-          <label class="accountPreferencesInput" for="username"
-            >Display Username</label
+          <a class="accountPreferencesInput">Clear search data </a>
+          <div>
+            <label class="accountPreferencesInput" for="auto-log-out">Delete history after how many days </label>
+  
+            <select name="auto-log-out-dropdown" id="auto-log-out">
+              <option value="0">0 days</option>
+              <option value="1">1 days</option>
+              <option value="2">2 days</option>
+              <option value="3">3 days</option>
+              <option value="4">4 days</option>
+              <option value="5">5 days</option>
+              <option value="6">6 days</option>
+              <option value="7">7 days</option>
+              <option value="8">8 days</option>
+              <option value="9">9 days</option>
+              <option value="10">10 days</option>
+              <option value="11">11 days</option>
+              <option value="12">12 days</option>
+              <option value="13">13 days</option>
+              <option value="14">14 days</option>
+              <option value="15">15 days</option>
+              <option value="16">16 days</option>
+              <option value="17">17 days</option>
+              <option value="18">18 days</option>
+              <option value="19">19 days</option>
+              <option value="20">20 days</option>
+              <option value="21">21 days</option>
+              <option value="22">22 days</option>
+              <option value="23">23 days</option>
+              <option value="24">24 days</option>
+              <option value="25">25 days</option>
+              <option value="26">26 days</option>
+              <option value="27">27 days</option>
+              <option value="28">28 days</option>
+              <option value="29">29 days</option>
+              <option value="30">30 days</option>
+              <option value="31">31 days</option>
+            </select>
+          </div>
+        </div>
+        <button id="accountPreferencesButton">Submit</button>
+      </div>
+    </div>
+    <div style="display: none" id="securityPopup">
+      <div id="securityInnerDiv">
+        <h1 class="settingsHeader">Edit Security</h1>
+        <div>
+        <div>
+          <label class="accountPreferencesInput" for="Two-factor"
+            >Require a code upon logging in </label
           >
-          <input type="checkbox" id="username" name="username" />
+          <input type="checkbox" id="Two-factor" name="Two-factor" />
         </div>
         <div>
-          <label class="accountPreferencesInput" for="usernameTextColor"
-            >Username Text Color </label
+          <label class="accountPreferencesInput" for="Sell-data"
+            >Don't sell my data</label
           >
+          <input type="checkbox" id="Sell-data" name="Sell-data" />
+        </div>
+        <div>
+          <label class="accountPreferencesInput" for="auto-log-out">Auto-log out after how many days </label>
 
-          <select name="usernameTextColor" id="usernameTextColor">
-            <option value="">Select:</option>
-            <option value="red">Red</option>
-            <option value="orange">Orange</option>
-            <option value="yellow">Yellow</option>
-            <option value="green">Green</option>
-            <option value="blue">Blue</option>
-            <option value="indigo">Indigo</option>
+          <select name="auto-log-out-dropdown" id="auto-log-out">
+            <option value="0">0 days</option>
+            <option value="1">1 days</option>
+            <option value="2">2 days</option>
+            <option value="3">3 days</option>
+            <option value="4">4 days</option>
+            <option value="5">5 days</option>
+            <option value="6">6 days</option>
+            <option value="7">7 days</option>
+            <option value="8">8 days</option>
+            <option value="9">9 days</option>
+            <option value="10">10 days</option>
+            <option value="11">11 days</option>
+            <option value="12">12 days</option>
+            <option value="13">13 days</option>
+            <option value="14">14 days</option>
+            <option value="15">15 days</option>
+            <option value="16">16 days</option>
+            <option value="17">17 days</option>
+            <option value="18">18 days</option>
+            <option value="19">19 days</option>
+            <option value="20">20 days</option>
+            <option value="21">21 days</option>
+            <option value="22">22 days</option>
+            <option value="23">23 days</option>
+            <option value="24">24 days</option>
+            <option value="25">25 days</option>
+            <option value="26">26 days</option>
+            <option value="27">27 days</option>
+            <option value="28">28 days</option>
+            <option value="29">29 days</option>
+            <option value="30">30 days</option>
+            <option value="31">31 days</option>
           </select>
         </div>
       </div>
-      <div class="accountPreferencesRows">
-        <div>
-          
-          <label class="accountPreferencesInput" for="mystery"
-            >Display User Photo</label
-          >
-          <input type="checkbox" id="mystery" name="mystery" />
-        </div>
-        
-        <div>
-          <label class="accountPreferencesInput" for="usernameTextColor"
-            >Photo Border Color </label
-          >
-
-          <select name="usernameTextColor" id="usernameTextColor">
-            <option value="">Select:</option>
-            <option value="red">Red</option>
-            <option value="orange">Orange</option>
-            <option value="yellow">Yellow</option>
-            <option value="green">Green</option>
-            <option value="blue">Blue</option>
-            <option value="indigo">Indigo</option>
-          </select>
-        </div>
+        <button id="accountPreferencesButton">Submit</button>
       </div>
-      
+    </div>
+    <div style="display: none" id="helpPopup">
+      <div id="helpInnerDiv">
+        <h1 class="settingsHeader">Help</h1>
+        <input
+          (click)="showAccountDetailsModal()"
+          readonly
+          class="settingsPageLink"
+          placeholder="How to use Movie Generator"
+        />
+        <input
+          (click)="showRecommendationModal()"
+          readonly
+          class="settingsPageLink"
+          placeholder="Contact Us"
+        />
+        <input
+          (click)="showAppearanceModal()"
+          readonly
+          class="settingsPageLink"
+          placeholder="How to delete account"
+        />
+        <input
+          (click)="showAccountDetailsModal()"
+          readonly
+          class="settingsPageLink"
+          placeholder="How to create playlists"
+        />
+        <input
+          (click)="showRecommendationModal()"
+          readonly
+          class="settingsPageLink"
+          placeholder="How to share a movie"
+        />
+        <input
+          (click)="showAppearanceModal()"
+          readonly
+          class="settingsPageLink"
+          placeholder="How to link external accounts"
+        />
+        <button id="accountPreferencesButton">Submit</button>
       </div>
-      <button id="accountPreferencesButton">Submit</button>
     </div>
-
-    </div>
-    <div id="historyPopup"></div>
-    <div id="securityPopup"></div>
-    <div id="helpPopup"></div>
-    <div id="termsAndConditionsPopup"></div>
-    <div id="feedbackPopup"></div>
-    <div id="signoutPopup"></div>
+    <div style="display: none" id="termsAndConditionsPopup"></div>
+    <div style="display: none" id="feedbackPopup"></div>
+    <div style="display: none" id="signoutPopup"></div>
   </div>
 </div>
