--- a/web-app/src/app/Pages/settings-page/settings-page.component.scss
+++ b/web-app/src/app/Pages/settings-page/settings-page.component.scss
@@ -145,7 +145,7 @@ $buttonBorderColor: rgb(138, 43, 226);
   width: 30vw;
 }
 
-#appearanceInnerDiv {
+#appearanceInnerDiv, #helpInnerDiv, #securityInnerDiv, #historyInnerDiv {
   display: flex;
   flex-direction: column;
   width: 30vw;
@@ -198,7 +198,7 @@ $buttonBorderColor: rgb(138, 43, 226);
   justify-content: center;
 }
 
-#appearancePopup {
+#appearancePopup, #helpPopup, #securityPopup, #historyPopup {
   display: flex;
   align-items: center;
   justify-content: center;
