Implement reset password flow. Implement login logic.

--- a/web-app/src/app/Pages/resetpassword-page/resetpassword-page.component.scss
+++ b/web-app/src/app/Pages/resetpassword-page/resetpassword-page.component.scss
@@ -14,11 +14,23 @@ $buttonBorderColor: rgb(138, 43, 226);
   flex-direction: column;
 }
 
+mat-stepper {
+  overflow: hidden;
+  height: 100vh;
+  width: 100vw;
+  background: #ebf606;
+  background: -webkit-linear-gradient(top right, #ebf606, #fa1894);
+  background: -moz-linear-gradient(top right, #ebf606, #fa1894);
+  background: linear-gradient(to bottom left, #ebf606, #fa1894);
+  display: flex;
+  flex-direction: column;
+}
+
 #resetPasswordPageModal {
   background-color: rgba(0, 0, 0, 0.75);
   border-radius: 5px;
-  width: 40vw;
-  height: 40vh;
+  width: 100%;
+  height: 60vh;
   display: flex;
   flex-direction: column;
   align-items: center;
