--- a/web-app/src/app/Pages/login-page/login-page.component.html
+++ b/web-app/src/app/Pages/login-page/login-page.component.html
@@ -13,11 +13,12 @@
           placeholder="Email Address"
           class="loginPageInput"
           type="email"
+          [(ngModel)]="email"
         />
-        <input placeholder="Password" class="loginPageInput" type="password" />
+        <input placeholder="Password" class="loginPageInput" type="password" [(ngModel)]="password" />
         
       </div>
-      <button id="loginPageButton">Log In</button>
+      <button mat-raised-button id="loginPageButton" (click)="onLogin()">Log In</button>
       <p id="loginPageText">Don't have an account? Sign-up <a routerLink="/signup-page">here</a>.</p>
     </div>
   </div>
