--- a/web-app/src/app/Pages/share-movie-page/share-movie-page.component.scss
+++ b/web-app/src/app/Pages/share-movie-page/share-movie-page.component.scss
@@ -115,3 +115,48 @@ background: linear-gradient(to bottom right, #27695A, #1C278C);
     -6px 12px 1px #828181, -7px 14px 1px #868585, -8px 16px 1px #8b8a89;
 }
 
+#shareMovieSentModal {
+  height: 30vh;
+  
+ 
+  color: #888;
+  padding-left: 1vw;
+  padding-right: 1vw;
+  
+}
+
+#shareMovieSentInnerDiv {
+  display: flex;
+  flex-direction: column;
+  width: 30vw;
+  align-items: center;
+}
+
+#shareMovieSentOuterModal {
+  background-color: rgba(0, 0, 0, 0.75);
+  border-radius: 5px;
+  width: 40vw;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-self: center;
+  padding-top: 3vh;
+  padding-bottom: 3vh;
+}
+
+#shareMovieSentButton {
+  color: white;
+  width: 100%;
+  height: 6vh;
+  border-radius: 5px;
+  border: none;
+  background-color: #a4508b;
+  background-image: linear-gradient(326deg, #a4508b 0%, #5f0a87 74%);
+  padding: 8px 0px 8px 0px;
+  margin-top: 2vh;
+}
+
+#shareMovieSentHeader {
+  color: white;
+}
